--- a/css/creative.css
+++ b/css/creative.css
@@ -56,6 +56,7 @@ p {
 }
 .bg-primary td {
     color: black;
+
 }
 
 .bg-dark {
@@ -74,6 +75,10 @@ p {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+.bg-names td {
+    color: black;
 }
 
 .text-faded {
